login page with express and passport created, it's not grapqhl api instead rest is used

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
 <head> 
     <title>Login</title> 
           
-    <form action="/login" method="post">
+    <form action="/" method="post">
         <div>
              <label>Username:</label>
              <input type="text" name="username"/>
@@ -17,6 +17,10 @@
              <input type="submit" value="Log In"/>
         </div>
   </form>
+  <!-- <form action="/signup" method="post"> -->
+     <!-- <input id="signup" type="submit" value="Sign Up"> -->
+
+     <!-- </form> -->
    
 </body> 
 </html>     
