--- a/app/public/prosumer.html
+++ b/app/public/prosumer.html
@@ -86,24 +86,27 @@
         <div class="col-md">
           <form>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <label for="udateEmail">Update email address</label>
+              <input type="email" class="form-control" id="updateEmail" aria-describedby="emailHelp" placeholder="Enter email">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <label for="updatePassword">New password</label>
+              <input type="password" class="form-control" id="updatePassword" placeholder="Enter new password">
             </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+            <div class="form-group">
+              <label for="currentPassword">Enter current password</label>
+              <input type="password" class="form-control" id="currentPassword" placeholder="Current password">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+
+            <button type="submit" class="btn btn-primary">Update</button>
           </form>
         </div>
 
         <div class="col-sm">
-          <img src="images/blank-profile.webp" class="img-fluid" alt="Profile picture">
+          <img src="images/blank-profile.webp" class="img-thumbnail" alt="Profile picture" id="upload-picture">
+          <button type="button" class="btn btn-primary">Upload picture</button>
         </div>
 
 
