Update prosumer page with DB values, change wrong type in weather schema

--- a/app/public/prosumer.html
+++ b/app/public/prosumer.html
@@ -61,17 +61,17 @@
         <!-- Display wind, production etc. as values! -->  
         <div class="col-md">
           <ul>
-            <li>Current wind speed:</li>
-            <li>Current production:</li>
-            <li>Current consumption:</li>
+            <li>Current wind speed:</li><span id="windspeed"></span>
+            <li>Current production:</li><span id="production"></span>
+            <li>Current consumption:</li><span id="consumption"></span>
           </ul>
         </div>
 
         <div class="col-md">
           <ul>
-            <li>Net production:</li>
-            <li>Battery capacity:</li>
-            <li>Market price:</li>
+            <li>Net production:</li><spand id="netproduction"></spand>
+            <li>Battery capacity:</li><span id="batterycap"></span>
+            <li>Market price:</li><span id="marketprice"></span>
           </ul>
         </div>
 
